--- a/style.css
+++ b/style.css
@@ -34,3 +34,77 @@
     border: 1px solid black;
     visibility: hidden;
 }
+
+/* id = dot-x-y */
+
+#id-0-0 {
+    color: #000;
+}
+
+#id-0-1 {
+    color: #0facd0;
+}
+
+#id-0-3 {
+    color: #acacac;
+}
+
+#id-0-4 {
+    color: #42ac34;
+}
+
+#id-0-5 {
+    color: #353535;
+}
+
+#id-0-6 {
+    color: #245321;
+}
+
+#id-0-7 {
+    color: #5f1232;
+}
+
+#id-0-8 {
+    color: #572312;
+}
+
+#id-0-9 {
+    color: #512132;
+}
+
+#id-0-10 {
+    color: #142321;
+}
+
+#id-1-0 {
+    color: #243512;
+}
+
+#id-1-1 {
+    color: #423152;
+}
+
+#id-1-2 {
+    color: #543213;
+}
+
+#id-1-3 {
+    color: #324125;
+}
+
+#id-1-4 {
+    color: #341232;
+}
+
+#id-1-5 {
+    color: #124321;
+}
+
+#id-1-6 {
+    color: #121512;
+}
+
+#id-1-7 {
+    color: #143223;
+}
